; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_srec2bin.c_binOut32.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_srec2bin.c_binOut32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fOut = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"Out32\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @binOut32(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [4 x i8], align 1
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %17, %1
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 4
  br i1 %7, label %8, label %20

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %4, align 4
  %11 = mul nsw i32 %10, 8
  %12 = ashr i32 %9, %11
  %13 = trunc i32 %12 to i8
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds [4 x i8], [4 x i8]* %3, i64 0, i64 %15
  store i8 %13, i8* %16, align 1
  br label %17

17:                                               ; preds = %8
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %4, align 4
  br label %5

20:                                               ; preds = %5
  %21 = getelementptr inbounds [4 x i8], [4 x i8]* %3, i64 0, i64 0
  %22 = load i32, i32* @fOut, align 4
  %23 = call i32 @fwrite(i8* %21, i32 1, i32 4, i32 %22)
  %24 = load i32, i32* %2, align 4
  %25 = call i32 @dumpfTell(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %24)
  ret void
}

declare dso_local i32 @fwrite(i8*, i32, i32, i32) #1

declare dso_local i32 @dumpfTell(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
